Fix vertical align navbar. Set style for active menu route

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -32,6 +32,13 @@ body {
     margin-left: .8rem;
 }
 
+.align-search {
+    margin: .5rem 1rem;
+}
+
+.active {
+    color : green !important;
+}
 
 .fact-card {
     border: 1px solid rgb(216, 216, 216);
